Fix figure overlap

--- a/mobile_style.css
+++ b/mobile_style.css
@@ -150,7 +150,7 @@
   }
 }
 
-@media only screen and (max-width: 765px) {
+@media only screen and (max-width: 855px) {
   .figure {
     width: 45%;
   }
